--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -43,6 +43,7 @@
     padding: 10px;
     border: none;
     border-radius: 4px;
+    margin-top: 15px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
@@ -59,9 +60,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    padding: 20px;
+    width: 50%;
+    padding: 50px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-container {
+    position: relative;
+  }
+
+  .modal a {
+    float: right;
+    cursor: pointer;
   }
   
   .overlay {
