--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,3 +43,10 @@
 .nav-links a:hover {
   text-decoration: underline;
 }
+
+.logo img {
+  width: auto;
+  height: 50px; /* Adjust as needed */
+  display: block;
+  margin: 0 auto;
+}
